# prism-pull

./: Pipfile  README.md  pyproject.toml  setup.py
.github/.workflows/: package_ci.yml
.github/scripts/: release_candidate.py
.github/workflows/: main-deploy.yml  package_ci.yml  pr-tests.yml
src/: csv_test.py  hit_prism.py  prism_session.py  test_coordinates.csv
tests/: test_prism_session.py
tests/resources/: bad_first_column.csv  bad_second_column.csv  large_coordinates.csv  long_name.csv  short_row.csv  single_row.csv  single_row_partition.csv  small_coordinates.csv
