[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-pull"
version = "0.1.3"
description = "Python package to pull PRISM weather data via web automation."
readme = "README.md"
authors = [
    { name = "John Baird" }
]
requires-python = ">=3.13"
dependencies = [
    "selenium",
    "webdriver_manager"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]